--- a/manage.css
+++ b/manage.css
@@ -28,7 +28,7 @@
     /* font weight */
     --weight1: 400;
     --weight2: 500;
-    --weighr3: 700;
+    --weight3: 700;
 }
 
 nav {
@@ -46,15 +46,123 @@ nav {
 .listing {
     /* border: 3px solid green; */
     display: flex;
-    flex-direction: row;
+    flex-direction:row;
     align-items: center;
     list-style-type: none;
     gap: 30px;
 
 }
 #get-started {
-    background-color: var(--Bright-Red);
+    background-color:var(--Bright-Red);
     padding: 5px 15px;
     border-radius: 20px;
     border: 0px;
+}
+#section-1 {
+    /* border: 2px solid black; */
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 40px 70px 100px;
+
+}
+.section-1-text {
+    /* border: 2px solid black; */
+    display: flex ;
+    flex-direction: column;
+    align-items: start;
+    gap: 20px;
+    width: 100%;
+}
+.section-1-text h1 {
+    font-size: 50px;
+    color: var(--dark-blue);
+    font-weight: var(--weight3);
+    width: 100%;
+
+}
+.section-1-text p {
+    font-size: var(--font-size);
+    color: var(--dark-Grayish-Blue);
+}
+
+.section-1-img {
+    width: 100%;
+} 
+.section-img img {
+    width: 80%;
+}
+
+
+ 
+#section-2 {
+    /* border: 2px solid black; */
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    margin: 40px 70px 100px;
+}
+
+.first-part, 
+.second-part {
+    width: 100%;
+}
+
+.first-part {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 20px;
+}
+.first-part h1 {
+    color: var(--dark-blue);
+    font-size: 40px;
+    font-weight: var(--weight3);
+}
+
+.first-part p {
+    font-size: var(--font-size);
+    color: var(--dark-Grayish-Blue);
+}
+.second-part {
+    /* border: 2px solid black; */
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 20px;
+}
+
+.no-1, .n0-2, .no-3 {
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    gap: 10px;
+}
+
+.no-1 div, .no-2 div, .no-3 div  {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 10px ;
+}
+.color {
+    background-color: var(--Bright-Red);
+    border-radius: 15px;
+    padding: 4px 20px;
+    color: white;
+    font-size: var(--font-size);
+
+}
+
+.no-1 div h3,
+.no-2 div h3,
+.no-3 div h3 {
+    color: var(--dark-blue);
+    font-size: 18px;
+}
+.no-1 div p,
+.no-2 div p,
+.no-3 div p {
+    color: var(--dark-Grayish-Blue);
+    font-size: 12px;
 }
